...
    <string name="floor3_image_desc">floor plan of floor three</string>
    <string name="floor4_image_desc">floor plan of floor four</string>
    <string name="floor5_image_desc">floor plan of floor five</string>
    <string name="floor6_image_desc">floor plan of floor six</string>

    <!-- Google Maps Directions Strings -->
    <string name="directions_title">Directions to the USB</string>
    <string name="directions_from_main_campus">Directions from Main Campus</string>
    <string name="directions_from_haymarket">Directions from Haymarket</string>
    <string name="directions_from_central_station">Directions from Central Station</string>
    <string name="directions_from_eldon_square">Directions from Eldon Square</string>

    <string name="main_campus_text">Main Campus</string>
    <string name="haymarket_text">Haymarket</string>
    <string name="central_station_text">Central Station</string>
    <string name="eldon_square_text">Eldon Square</string>

    <string name="food_and_drink_stops">Food and Drink</string>
    <string name="university_stops">University</string>
    <string name="accomodation_stops">Accommodation</string>

    <array name="pre_config_tour"></array>

    <!-- Nav Bar Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>

